# insurance-intelligence-hub

./: .env.example  .gitignore  GUIA-PROYECTO-IHUB.md  README.md  ROADMAP.md  render.yaml
.github/workflows/: ci.yml
backend-compute/: README.md  requirements.txt
backend-compute/app/: __init__.py  config.py  database.py  demo_engine.py  deps.py  ingest_service.py  kpi_service.py  main.py  market_service.py  portfolio_analytics.py  schemas.py
backend-ingest/: README.md  pytest.ini  requirements-dev.txt  requirements.txt
backend-ingest/config/: settings.py  urls.py
backend-ingest/core/: admin.py  context_processors.py  forms.py  ingest_service.py  models.py  views.py
docs/: architecture.md  brand-la-fe.md  deploy-free-tier.md  ecosystem.md  levantamiento-procesos-bi-la-fe.md  metrics-and-portals.md  requerimientos-infraestructura-bi-integral.md  sample-policies.csv  sudeaseg-data-scope.md
docs/pdf/: infra-bi-la-fe V1.html
lab-streamlit/: README.md  app.py  cohort_visuals.py  pygwalker_lab.py  requirements-optional.txt  requirements.txt
lab-streamlit/.streamlit/: config.toml  secrets.toml.example
lab-streamlit/assets/: venezuela_admin1.geojson  venezuela_estados.geojson
portal-reflex/: .env.example  README.md  requirements.txt  rxconfig.py
portal-reflex/iihub_portal/: __init__.py  copy.py  external_links.py  (+6 more)
scripts/: etl_sudeaseg.py  generar_pdf_requerimientos_bi.py  requirements-etl.txt  requirements-pdf.txt  seed_operational_aligned.py
shared/: README.md  pyproject.toml
shared/contracts/: __init__.py  claim.py  policy.py
supabase/: README.md
(+31 files in other folders)
