[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hub-contracts"
version = "0.1.0"
description = "Contratos Pydantic compartidos (Insurance Intelligence Hub)"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.5,<3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["contracts*"]
